Remove RollReadHolder.kt and RollWriteHolder.kt -> replace it with RollHolder.kt

--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -37,7 +37,7 @@
                 android:visibility="gone"
                 tools:visibility="visible"
                 tools:itemCount="3"
-                tools:listitem="@layout/item_roll_write" />
+                tools:listitem="@layout/item_roll" />
 
         </FrameLayout>
 
