--- a/app/src/main/res/layout/inc_note_panel_roll.xml
+++ b/app/src/main/res/layout/inc_note_panel_roll.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical"
         tools:layout_gravity="center">
 
+        <!--  Make it invisible in read state to prevent layout size change.  -->
         <View
             android:id="@+id/divider_view"
             style="@style/Divider.Horizontal"
