Improve animation: add skip in some cases

--- a/app/src/main/res/layout/inc_roll_add_panel.xml
+++ b/app/src/main/res/layout/inc_roll_add_panel.xml
@@ -11,6 +11,7 @@
         android:layout_gravity="bottom"
         android:background="?attr/clPrimary"
         android:orientation="vertical"
+        android:visibility="visible"
         tools:alpha="0.8"
         tools:visibility="visible">
 
