Remove unnecessary layouts and place divider into inc_note_panel.xml

--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -64,7 +64,7 @@
 
         <include
             android:id="@+id/panel"
-            layout="@layout/inc_note_panel_roll" />
+            layout="@layout/inc_note_panel" />
 
     </LinearLayout>
 
