--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -18,9 +18,6 @@
     <integer name="gradient_exit_time">1500</integer>
     <integer name="gradient_state_time">1500</integer>
 
-    <!--  TODO #Remove  -->
-    <integer name="recycler_enter_time">250</integer>
-
     <integer name="placeholder_fade_time">500</integer>
 
     <integer name="list_fade_time">200</integer>
@@ -29,4 +26,5 @@
     <integer name="alarm_show_time">500</integer>
 
     <integer name="note_panel_change_time">200</integer>
+    <integer name="progress_change_time">200</integer>
 </resources>
