--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="item"
-            type="sgtmelon.scriptum.cleanup.domain.model.item.NoteItem.Text" />
-    </data>
-
     <androidx.cardview.widget.CardView
-        android:id="@+id/note_text_parent_card"
+        android:id="@+id/parent_card"
         style="@style/Card.Item"
-        app:noteColor='@{item.color}'
         tools:cardBackgroundColor="@color/note_green_light">
 
         <FrameLayout
-            android:id="@+id/note_text_click_container"
+            android:id="@+id/click_container"
             style="@style/Container.Note.Click">
 
             <LinearLayout style="@style/Container.Note.Content">
 
-                <include
-                    layout="@layout/inc_note_text_content"
-                    app:item="@{item}" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/name_text"
+                        style="@style/Text.Note.Name"
+                        tools:text="@string/preview_note_name"
+                        tools:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/content_text"
+                        style="@style/Text.Note.Content"
+                        tools:text="@string/preview_note_text" />
+
+                    <include
+                        android:id="@+id/info"
+                        layout="@layout/inc_note_text_info" />
+
+                </LinearLayout>
 
                 <View
-                    android:id="@+id/note_text_color_view"
+                    android:id="@+id/color_view"
                     style="@style/View.Color.Vertical.Note"
                     android:importantForAccessibility="no"
                     android:visibility="gone" />
