Remove dataBinding from item_note_roll.xml

--- a/app/src/main/res/layout/inc_note_text_info.xml
+++ b/app/src/main/res/layout/inc_note_text_info.xml
@@ -5,7 +5,7 @@
     tools:showIn="@layout/item_note_text">
 
     <LinearLayout
-        android:id="@+id/note_info_container"
+        android:id="@+id/info_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/item_content_between_space"
