--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -1,38 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="item"
-            type="sgtmelon.scriptum.cleanup.domain.model.item.NoteItem.Roll" />
-    </data>
-
     <androidx.cardview.widget.CardView
-        android:id="@+id/note_roll_parent_card"
+        android:id="@+id/parent_card"
         style="@style/Card.Item"
-        app:noteColor='@{item.color}'
         tools:cardBackgroundColor="@color/note_red_light">
 
         <FrameLayout
-            android:id="@+id/note_roll_click_container"
+            android:id="@+id/click_container"
             style="@style/Container.Note.Click">
 
             <LinearLayout style="@style/Container.Note.Content">
 
                 <include
-                    layout="@layout/inc_note_roll_content"
-                    app:item="@{item}" />
+                    android:id="@+id/content"
+                    layout="@layout/inc_note_roll_content" />
 
                 <View
-                    android:id="@+id/note_roll_color_view"
+                    android:id="@+id/color_view"
                     style="@style/View.Color.Vertical.Note"
                     android:importantForAccessibility="no"
-                    android:visibility="gone" />
+                    tools:visibility="gone" />
 
             </LinearLayout>
 
