--- a/app/src/main/res/layout/inc_item_note_roll.xml
+++ b/app/src/main/res/layout/inc_item_note_roll.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="@layout/item_note_roll">
-
-    <data>
-
-        <variable name="item" type="sgtmelon.scriptum.cleanup.domain.model.item.RollItem" />
-    </data>
+    tools:showIn="@layout/inc_note_roll_content">
 
     <LinearLayout
-        android:id="@+id/note_roll_container"
+        android:id="@+id/parent_container"
         style="@style/Container.Note"
         android:orientation="horizontal"
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
-            android:id="@+id/note_roll_check_image"
+            android:id="@+id/check_image"
             style="@style/Image.Note.Check"
             android:importantForAccessibility="no"
-            android:src='@{item != null &amp;&amp; item.check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
             tools:srcCompat="@drawable/ic_check_done" />
 
         <TextView
-            android:id="@+id/note_roll_content_text"
+            android:id="@+id/content_text"
             style="@style/Text.Note.Roll"
-            android:text='@{item != null ? item.text : ""}'
             tools:text="@string/preview_note_roll" />
 
     </LinearLayout>
