--- a/app/src/main/res/layout/inc_note_roll_content.xml
+++ b/app/src/main/res/layout/inc_note_roll_content.xml
@@ -1,17 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/item_note_roll">
-
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="item"
-            type="sgtmelon.scriptum.cleanup.domain.model.item.NoteItem.Roll" />
-    </data>
 
     <merge>
 
@@ -22,10 +12,8 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/note_roll_name_text"
+                android:id="@+id/name_text"
                 style="@style/Text.Note.Name"
-                android:text='@{item.name}'
-                android:visibility='@{item.name.isEmpty() ? View.GONE : View.VISIBLE}'
                 tools:text="@string/preview_note_name" />
 
             <LinearLayout
@@ -36,34 +24,30 @@
                 android:showDividers="middle">
 
                 <include
-                    android:id="@+id/note_roll_row0_container"
+                    android:id="@+id/first_row"
                     layout="@layout/inc_item_note_roll"
-                    android:visibility="@{item.list.size() &gt;= 1 ? View.VISIBLE : View.GONE}"
-                    app:item="@{item.list.size() &gt;= 1 ? item.list.get(0) : null}" />
+                    tools:visibility="visible" />
 
                 <include
-                    android:id="@+id/note_roll_row1_container"
+                    android:id="@+id/second_row"
                     layout="@layout/inc_item_note_roll"
-                    android:visibility="@{item.list.size() &gt;= 2 ? View.VISIBLE : View.GONE}"
-                    app:item="@{item.list.size() &gt;= 2 ? item.list.get(1) : null}" />
+                    tools:visibility="visible" />
 
                 <include
-                    android:id="@+id/note_roll_row2_container"
+                    android:id="@+id/third_row"
                     layout="@layout/inc_item_note_roll"
-                    android:visibility="@{item.list.size() &gt;= 3 ? View.VISIBLE : View.GONE}"
-                    app:item="@{item.list.size() &gt;= 3 ? item.list.get(2) : null}" />
+                    tools:visibility="visible" />
 
                 <include
-                    android:id="@+id/note_roll_row3_container"
+                    android:id="@+id/fourth_row"
                     layout="@layout/inc_item_note_roll"
-                    android:visibility="@{item.list.size() &gt;= 4 ? View.VISIBLE : View.GONE}"
-                    app:item="@{item.list.size() &gt;= 4 ? item.list.get(3) : null}" />
+                    tools:visibility="gone" />
 
             </LinearLayout>
 
             <include
-                layout="@layout/inc_note_roll_info"
-                app:item='@{item}' />
+                android:id="@+id/info"
+                layout="@layout/inc_note_roll_info" />
 
         </LinearLayout>
 
