--- a/app/src/main/res/layout/inc_note_roll_info.xml
+++ b/app/src/main/res/layout/inc_note_roll_info.xml
@@ -4,15 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/item_note_roll">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable name="item" type="sgtmelon.scriptum.cleanup.domain.model.item.NoteItem.Roll" />
-    </data>
-
     <LinearLayout
-        android:id="@+id/note_info_container"
+        android:id="@+id/info_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/item_content_between_space"
@@ -22,28 +15,26 @@
         android:showDividers="middle">
 
         <TextView
-            android:id="@+id/note_info_progress_text"
+            android:id="@+id/progress_text"
             style="@style/Text.Note.Info"
             android:layout_width="wrap_content"
-            android:text='@{item.text}'
             tools:text="@string/preview_note_done"
             tools:visibility="visible" />
 
         <LinearLayout
+            android:id="@+id/indicator_container"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:divider="@drawable/div_vertical_small"
             android:orientation="horizontal"
             android:gravity="center"
             android:showDividers="middle"
-            android:visibility="@{!item.isVisible || item.haveAlarmDepr || item.status || item.haveRankDepr ? View.VISIBLE : View.GONE}"
             tools:visibility="visible">
 
             <ImageView
-                android:id="@+id/note_info_visible_image"
+                android:id="@+id/visible_image"
                 style="@style/Image.Note.Info"
                 android:importantForAccessibility="no"
-                android:visibility='@{!item.isVisible ? View.VISIBLE : View.GONE }'
                 app:srcCompat="@drawable/ic_visible_exit"
                 tools:visibility="visible" />
 
@@ -51,7 +42,6 @@
                 android:id="@+id/alarm_image"
                 style="@style/Image.Note.Info"
                 android:importantForAccessibility="no"
-                android:visibility="@{item.haveAlarmDepr ? View.VISIBLE : View.GONE }"
                 app:srcCompat="@drawable/ic_notifications"
                 tools:visibility="visible" />
 
@@ -60,14 +50,12 @@
                 style="@style/Image.Note.Info"
                 android:importantForAccessibility="no"
                 android:src="@drawable/ic_bind_roll"
-                android:visibility='@{item.status ? View.VISIBLE : View.GONE}'
                 tools:visibility="visible" />
 
             <ImageView
                 android:id="@+id/rank_image"
                 style="@style/Image.Note.Info"
                 android:importantForAccessibility="no"
-                android:visibility="@{item.haveRankDepr ? View.VISIBLE : View.GONE}"
                 app:srcCompat="@drawable/ic_rank"
                 tools:visibility="visible" />
 
@@ -78,14 +66,12 @@
             style="@style/Text.Note.Info"
             android:layout_width="0dp"
             android:layout_weight="1"
-            app:pastTime='@{item.change}'
             tools:text="@string/preview_note_time" />
 
         <TextView
             android:id="@+id/create_text"
             style="@style/Text.Note.Info"
             android:layout_width="wrap_content"
-            app:pastTime='@{item.create}'
             tools:text="@string/preview_note_time" />
 
     </LinearLayout>
