Finish SplashOpen.kt serialization

--- a/app/src/main/res/values-ru/strings_help.xml
+++ b/app/src/main/res/values-ru/strings_help.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--  TODO Remove after help disappear refactor  -->
+
     <string name="help_notification_disappear">
         Примечание:
         \nУ всех разные телефоны из-за чего сложно собрать единый список
