--- a/app/src/main/res/menu/activity_help_disappear.xml
+++ b/app/src/main/res/menu/activity_help_disappear.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--  TODO Remove after help disappear refactor  -->
     <item android:id="@+id/item_video_lesson"
         android:icon="@drawable/ic_video"
         android:title="@string/menu_video_lesson"
