--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -22,6 +22,7 @@
     <string name="menu_roll_visible">Скрыть выполненные пункты</string>
     <string name="menu_roll_invisible">Показать выполненные пункты</string>
 
+    <!--  TODO Remove after help disappear refactor  -->
     <string name="menu_video_lesson">Открыть видео урок</string>
 
     <!-- Notifications -->
