--- a/app/src/main/res/values/strings_help.xml
+++ b/app/src/main/res/values/strings_help.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--  TODO Remove after help disappear refactor  -->
+
     <string name="help_notification_disappear">
         Note:
         \nEveryone has different phones, which makes it difficult to put together a single
