--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -2,8 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <import type="sgtmelon.scriptum.infrastructure.model.annotation.TestViewTag" />
+    </data>
+
     <LinearLayout
         android:id="@+id/parent_container"
+        android:tag='@{TestViewTag.ROLL_NOTE}'
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
