Create NoteScreen.kt (for common needs)

--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <import type="sgtmelon.scriptum.infrastructure.model.annotation.TestViewTag" />
+    </data>
+
     <FrameLayout
         android:id="@+id/parent_container"
+        android:tag='@{TestViewTag.NOTE}'
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
